skeplib/tests/fixtures/sema_project/valid/folder_import_namespace/string/case.sk
fn up(s: String) -> String { return s; }
export { up };
