skeplib/tests/fixtures/sema_project/invalid/duplicate_alias/a.sk
fn foo() -> Int { return 1; }
export { foo };
